--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "BSD",
   "readmeFilename": "README.md",
   "dependencies": {
-    "underscore": "~1.4.3"
+    "underscore": "~1.4.3",
+    "colors": "~0.6.0-1"
   }
 }
