--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,2 @@
-safe: true
-lsi: false
-markdown: maruku
+markdown: rdiscount
 pygments: true
-
-maruku:
-  use_tex:    true
-  use_divs:   true
-  png_engine: blahtex
-  png_dir:    images/latex
-  png_url:    /images/latex
